# remoc adoption spike — see docs/research/remoc-spike-2026-07-20.md.
#
# Deliberately NOT a member of the horizon workspace: the empty
# `[workspace]` table below makes this crate its own root, so the repo's
# root Cargo.lock, clippy gate and nextest run are untouched by it.
[package]
name = "remoc-spike"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# Real payload types (TerminalFrame/TerminalLine/TerminalSpan).
horizon-terminal-core = { path = "../../crates/horizon-terminal-core" }

# Object under test. Default features = full + default-codec-postbag
# (since 0.18.0). codec-json / codec-ciborium are added for the baseline
# comparison and the cross-version experiment.
remoc = { version = "=0.18.3", features = ["codec-json", "codec-ciborium"] }

# Second, older remoc for the cross-version chmux compatibility
# experiment (item 3). 0.16.1 predates the Postbag default codec
# (its default codec is JSON) but already speaks chmux protocol
# version 3, like 0.18.x.
remoc_016 = { package = "remoc", version = "=0.16.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[profile.release]
debug = true

[lints.clippy]
# The bench/test code annotates Connect::io's (conn, Sender, Receiver)
# triples in full; the aliasing ceremony isn't worth it for a spike.
type_complexity = "allow"
