# Standalone spike crate — deliberately detached from the root workspace
# (empty [workspace] table below) so gpui's dependency tree never mixes
# into the main lockfile. See docs/research/winit-backend-spike.md.
#
# Unlike the root workspace (which rides gpui git HEAD, pinned only via
# Cargo.lock), this crate pins gpui/gpui_wgpu to a fixed rev so the spike's
# findings can't silently drift out from under the doc that describes them.
[package]
name = "gpui-winit-spike"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed", rev = "5f8a7413a31769e0882357f90dc424b3962ac72d" }
gpui_wgpu = { git = "https://github.com/zed-industries/zed", rev = "5f8a7413a31769e0882357f90dc424b3962ac72d" }
log = "0.4"
env_logger = "0.11"
raw-window-handle = "0.6"
uuid = "1"
winit = "0.30"
